@@ -1,19 +1,0 @@
-# This is the BitBucket Piplines tool for faspsolver
-# Check our guides at https://confluence.atlassian.com/x/VYk8Lw for more examples.
-# Only use spaces to indent your .yml configuration.
-# -----
-# You can specify a custom docker image from Docker Hub as your build environment.
-image: zhangcs/faspsolver
-# This Docker image contains Ubuntu 16.04 + gcc/g++/gfortran 5.4.0
-
-pipelines:
-  default:
-    - step:
-        script:
-          - make config
-          - make install
-          - make test
-          - make tutorial
-          - cd test
-          - ./regression.ex
-          - echo "RELEASE build works!"
